Fixes crash in ~ShellConnection

Code was assuming a WindowManagerConnection has been created, which is
not necessarily the case. In particular if you run a single test and
the test doesn't talk to mus you hit the check.

BUG=613018
TEST=test only change
R=sadrul@chromium.org

Review-Url: https://codereview.chromium.org/1998543004
Cr-Commit-Position: refs/heads/master@{#394795}

Former-commit-id: 56172f6d40ecf4dc259a05d37df4bd2ac8789846